--- a/app/src/main/res/layout/beach_list_item.xml
+++ b/app/src/main/res/layout/beach_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
+    android:gravity="center_vertical"
     android:layout_height="wrap_content">
 
     <CheckBox
@@ -11,7 +12,10 @@
 
     <TextView
         android:id="@+id/beach_list_name"
+        android:gravity="center_vertical"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_width="wrap_content"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:textSize="18sp"/>
 
 </LinearLayout>
