--- a/app/src/main/res/layout/beach_list_item.xml
+++ b/app/src/main/res/layout/beach_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:gravity="center_vertical"
+    android:layout_marginTop="10dp"
     android:layout_height="wrap_content">
 
     <CheckBox
@@ -10,12 +10,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/beach_list_name"
-        android:gravity="center_vertical"
-        android:textColor="@color/colorPrimaryDark"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textSize="18sp"/>
+        android:layout_height="50dp">
+
+        <TextView
+            android:id="@+id/beach_list_name"
+            android:gravity="center_vertical"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/beach_list_region"
+            android:gravity="center_vertical"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
