--- a/app/src/main/res/layout/beach_list_item.xml
+++ b/app/src/main/res/layout/beach_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_marginTop="10dp"
     android:layout_height="wrap_content">
 
@@ -13,6 +14,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_height="50dp">
 
         <TextView
